If applied, this changes the badge text from "vulnerable" to "urgent"

--- a/views/case_details/_case-info-partial.njk
+++ b/views/case_details/_case-info-partial.njk
@@ -102,7 +102,7 @@
   {# Urgent case #}
   {% if client.is_urgent === 'true' %} 
     {{ mojBadge({
-      text: t('pages.caseDetails.vulnerable'),
+      text: t('pages.caseDetails.urgent'),
       classes: "moj-badge--red govuk-!-margin-bottom-3"
     }) }}
   {% endif %}
